@@ -11,6 +11,8 @@
 
 /*!@brief Send a control message to retrieve an entire input report
  *
+ * To use an interrupt endpoint instead of EP0, use hid_interrupt_read().
+ *
  * @param[in] hidif Which interface to query
  * @param[in] path  Path to input item (to find Report ID)
  * @param[in] depth See hid_find_object()
@@ -48,7 +50,7 @@ hid_return hid_get_input_report(HIDInterface* const hidif, int const path[],
       buffer, size, USB_TIMEOUT);
 
   if (len < 0) {
-    WARNING("failed to retrieve report from USB device %s.", hidif->id);
+    WARNING("failed to retrieve report from USB device %s:%s.", hidif->id, usb_strerror());
     return HID_RET_FAIL_GET_REPORT;
   }
 
@@ -63,6 +65,9 @@ hid_return hid_get_input_report(HIDInterface* const hidif, int const path[],
 }
 
 /*!@brief Send an entire output report to the device
+ *
+ * This routine uses a control message to send the report. To use an interrupt
+ * endpoint, use hid_interrupt_write().
  *
  * @param[in] hidif Which interface to send to
  * @param[in] path  Path to an output item (to find Report ID)
@@ -101,7 +106,7 @@ hid_return hid_set_output_report(HIDInterface* const hidif, int const path[],
       (char*)buffer, size, USB_TIMEOUT);
 
   if (len < 0) {
-    WARNING("failed to send report to USB device %s.", hidif->id);
+    WARNING("failed to send report to USB device %s:%s.", hidif->id,usb_strerror());
     return HID_RET_FAIL_SET_REPORT;
   }
 
@@ -158,7 +163,7 @@ hid_return hid_get_item_value(HIDInterface* const hidif, int const path[],
       (char*)buffer, size, USB_TIMEOUT);
 
   if (len < 0) {
-    WARNING("failed to retrieve report from USB device %s.", hidif->id);
+    WARNING("failed to retrieve report from USB device %s:%s.", hidif->id,usb_strerror());
     return HID_RET_FAIL_GET_REPORT;
   }
 
@@ -235,7 +240,7 @@ hid_return hid_interrupt_read(HIDInterface * const hidif,
                                timeout);
 
   if (len < 0) {
-    WARNING("failed to get interrupt read from device %s", hidif->id);
+    WARNING("failed to get interrupt read from device %s: %s", hidif->id, usb_strerror());
     return HID_RET_FAIL_INT_READ;
   }
 
@@ -247,6 +252,92 @@ hid_return hid_interrupt_read(HIDInterface * const hidif,
   }
 
   NOTICE("successfully got interrupt report from device %s", hidif->id);
+  return HID_RET_SUCCESS;
+}
+
+/*!@brief Write to the interrupt endpoint
+ *
+ * @param[in]  hidif  Which interface to send to
+ * @param[in]  ep     Which endpoint to write
+ * @param[out] bytes  Buffer to send
+ * @param[in]  size   How many bytes to write
+ * @param[in] timeout How long to wait, in milliseconds
+ *
+ * It is up to the programmer to determine which input endpoint to write.
+ */
+hid_return hid_interrupt_write(HIDInterface * const hidif,
+     unsigned int const ep, const char* const bytes, unsigned int const size, 
+     unsigned int const timeout) 
+{
+  ASSERT(hid_is_initialised());
+  ASSERT(hid_is_opened(hidif));
+  ASSERT(bytes);
+
+  if (!bytes) return HID_RET_INVALID_PARAMETER;
+
+  if (!hid_is_opened(hidif)) {
+    WARNING("the device has not been opened.");
+    return HID_RET_DEVICE_NOT_OPENED;
+  }
+
+  TRACE("writing interrupt report to device %s ...", hidif->id);
+
+  int len = usb_interrupt_write(hidif->dev_handle,
+                               ep,
+                               (char *)bytes,
+                               size,
+                               timeout);
+
+  if (len < 0) {
+    WARNING("failed to perform interrupt write to device %s: %s", hidif->id, usb_strerror());
+    return HID_RET_FAIL_INT_READ;
+  }
+
+  if (len != (signed)size) {
+    WARNING("failed to write all of interrupt report to device %s; "
+      "requested: %d bytes, sent: %d bytes.", hidif->id,
+      size, len);
+    return HID_RET_FAIL_INT_READ;
+  }
+
+  NOTICE("successfully sent interrupt report to device %s", hidif->id);
+  return HID_RET_SUCCESS;
+}
+
+/*!@brief Execute a Set_Idle request on an Interrupt In pipe
+ *
+ * This is used to tell a device not to send reports unless something has
+ * changed (duration = 0), or unless a minimum time interval has passed.
+ *
+ * @param[in] hidif      Which interface to send to
+ * @param[in] duration   0 for indefinite, otherwise in increments of 4 ms (to 1020 ms)
+ * @param[in] report_id  0 for all reports, otherwise a Report ID
+ */
+hid_return hid_set_idle(HIDInterface * const hidif,
+		unsigned duration, unsigned report_id) 
+{
+  if(duration > 255) {
+    WARNING("duration must be in the range [0,255]");
+    return HID_RET_INVALID_PARAMETER;
+  }
+
+  if(report_id > 255) {
+    WARNING("Report ID must be in the range [0,255]");
+    return HID_RET_INVALID_PARAMETER;
+  }
+
+  int len = usb_control_msg(hidif->dev_handle,
+      USB_TYPE_CLASS + USB_RECIP_INTERFACE,
+      HID_SET_IDLE,
+      report_id + ((duration & 0xff) << 8),
+      hidif->interface,
+      NULL, 0, USB_TIMEOUT);
+
+  if (len != 0) {
+    WARNING("failed to Set_Idle for USB device %s:%s.", hidif->id, usb_strerror());
+    return HID_RET_FAIL_GET_REPORT;
+  }
+
   return HID_RET_SUCCESS;
 }
 
